# multimodel-fitting

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  TODO  build.sh  generate.sh
examples/: CMakeLists.txt
examples/cross_2d/: CMakeLists.txt  config_ortholines.cxx  config_ortholines.hxx  dataset_generator.cxx  dataset_generator.hxx  drawer_2d.cxx  drawer_2d.hxx  main.cxx  problem_ortholines.cxx  problem_ortholines.hxx  shapes_2d.cxx  shapes_2d.hxx
examples/hello_world/: CMakeLists.txt  main.cxx
examples/kinect/: CMakeLists.txt  data_reader.cxx  data_reader.hxx  drawer_kinect.cxx  drawer_kinect.hxx  embed_resource.py  main.cxx  problem_kinect.cxx  problem_kinect.hxx  result_writer.hxx  shapes_3d.cxx  shapes_3d.hxx
examples/kinect/example_result/: label_0.txt  label_1.txt  label_2.txt  label_3.txt  label_4.txt  output.txt  visualize.m
examples/lines/: CMakeLists.txt  datapoints.cxx  datapoints.hxx  drawer_2d.cxx  drawer_2d.hxx  main.cxx  problem_lines.cxx  problem_lines.hxx  shapes_2d.cxx  shapes_2d.hxx
include/: CMakeLists.txt  mfigp.hxx  multimodelfitting.hxx
include/mfigp/: alphaexpansionfitter.hxx  config.hxx  mincut_maxflow.hxx
include/mfigp/ext/: block.h  graph.h  graph.txx
src/: CMakeLists.txt  multimodelfitting.cxx
tests/: CMakeLists.txt
tests/kinect/: CMakeLists.txt  correct_result.hxx  data_reader.cxx  hypotheses.hxx  main.cxx  main_templated.hxx  problem_kinect.cxx  problem_kinect.hxx
tests/lines/: CMakeLists.txt  correct_result.hxx  main.cxx  main_double.cxx  main_float.cxx  main_templated.hxx  problem_lines.cxx  problem_lines.hxx
